--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <h2 class="pb-12"><strong>9. Lista zmian (changelog)</strong></h2>
         <ol>
-            <li>Pełną listę zmian przeczytasz pod adresem: <a href="https://wwe.wypierdalaj.org/changelog.html">https://wwe.wypierdalaj.org/changelog.html</a></li>
+            <li>Pełną listę zmian przeczytasz pod adresem: <a href="https://ttch-iddqd.github.io/Platynowa-Dzida/changelog.html">https://wwe.wypierdalaj.org/changelog.html</a></li>
         </ol>
         
         </div>
