--- a/changelog.html
+++ b/changelog.html
@@ -13,6 +13,13 @@
 
         <h2>Lista zmian</h2>
 
+        <h3>Wersja 2.6.2</h3>
+
+        <ul>
+            <li>Changelog został przeniesiony na adres: <a href="https://ttch-iddqd.github.io/Platynowa-Dzida/changelog.html">https://ttch-iddqd.github.io/Platynowa-Dzida/changelog.html</a></li>
+            <li>Poloityka prywatności została przeniesiona na adres: <a href="https://ttch-iddqd.github.io/Platynowa-Dzida/index.html">https://ttch-iddqd.github.io/Platynowa-Dzida/index.html</a></li>
+        </ul>
+
         <h3>Wersja 2.6.1</h3>
 
         <ul>
