--- a/changelog.html
+++ b/changelog.html
@@ -13,6 +13,13 @@
 
         <h2>Lista zmian</h2>
 
+        <h3>Wersja 2.6.3</h3>
+
+        <ul>
+            <li>Dodano przycisk "obserwój" na ukrytych profilach. Dzięki temu można łatwo dodawać albo usówać z obserwanych ukryte profile</li>
+            <li>Na ukrytych profilach wyświetlana jest nazwa użytkownika</li>
+        </ul>
+
         <h3>Wersja 2.6.2</h3>
 
         <ul>
