--- a/changelog.html
+++ b/changelog.html
@@ -16,7 +16,7 @@
         <h3>Wersja 2.6.3</h3>
 
         <ul>
-            <li>Dodano przycisk "obserwój" na ukrytych profilach. Dzięki temu można łatwo dodawać albo usówać z obserwanych ukryte profile</li>
+            <li>Dodano przycisk "obserwuj" na ukrytych profilach. Dzięki temu można łatwo dodawać albo usówać z obserwanych ukryte profile</li>
             <li>Na ukrytych profilach wyświetlana jest nazwa użytkownika</li>
         </ul>
 
