--- a/changelog.html
+++ b/changelog.html
@@ -13,11 +13,18 @@
 
         <h2>Lista zmian</h2>
 
+        <h3>Wersja 2.6.5</h3>
+
+        <ul>
+            <li>Dodano komendę !minus wyszukującą tylko ujemne komentarze</li>
+        </ul>
+
         <h3>Wersja 2.6.4</h3>
 
         <ul>
             <li>Rozbudowano trochę statystyki</li>
             <li>Dodano możliwość napisania własnych sugestii odnośnie wtyczki bezpośrednio na moje konto na jbzd</li>
+            <li>Poprawiono błąd</li>
         </ul>
 
         <h3>Wersja 2.6.3</h3>
