--- a/changelog.html
+++ b/changelog.html
@@ -16,7 +16,7 @@
         <h3>Wersja 2.6.5</h3>
 
         <ul>
-            <li>Dodano komendę !minus wyszukującą tylko ujemne komentarze</li>
+            <li>Dodano komendę "!minus" wyszukującą tylko ujemne komentarze</li>
         </ul>
 
         <h3>Wersja 2.6.4</h3>
