--- a/changelog.html
+++ b/changelog.html
@@ -13,6 +13,14 @@
 
         <h2>Lista zmian</h2>
 
+        <h3>Wersja 2.6.6</h3>
+
+        <ul>
+            <li>Dodano komendę "!neutral" wyszukującą tylko koemntarze z zerowym bilansem</li>
+            <li>Dodano opcję spamu. Po wpisaniu treści komentarza skrypt automatycznie odpowie na każdy koemntarz w poczekalni</li>
+        </ul>
+
+
         <h3>Wersja 2.6.5</h3>
 
         <ul>
