--- a/changelog.html
+++ b/changelog.html
@@ -32,7 +32,7 @@
         <ul>
             <li>Rozbudowano trochę statystyki</li>
             <li>Dodano możliwość napisania własnych sugestii odnośnie wtyczki bezpośrednio na moje konto na jbzd</li>
-            <li>Poprawiono błąd</li>
+            <li>Poprawiono jakiś błąd</li>
         </ul>
 
         <h3>Wersja 2.6.3</h3>
