--- a/changelog.html
+++ b/changelog.html
@@ -18,6 +18,7 @@
         <ul>
             <li>Dodano komendę "!neutral" wyszukującą tylko koemntarze z zerowym bilansem</li>
             <li>Dodano opcję spamu. Po wpisaniu treści komentarza skrypt automatycznie odpowie na każdy koemntarz w poczekalni</li>
+            <li>Dodano automatyczne raportowanie całego kontentu na profilu</li>
         </ul>
 
 
