--- a/changelog.html
+++ b/changelog.html
@@ -13,6 +13,14 @@
 
         <h2>Lista zmian</h2>
 
+        <h3>Wersja 2.6.7</h3>
+
+        <ul>
+            <li>Poprawiono kilka błęów/li>
+            <li>Zoptymalizowano i zauktualizowano usuwanie reklam</li>
+            <li>Całkowicie wyłączono telemetrie yandex</li>
+        </ul>
+
         <h3>Wersja 2.6.6</h3>
 
         <ul>
@@ -20,7 +28,6 @@
             <li>Dodano opcję spamu. Po wpisaniu treści komentarza skrypt automatycznie odpowie na każdy koemntarz w poczekalni</li>
             <li>Dodano automatyczne raportowanie całego kontentu na profilu</li>
         </ul>
-
 
         <h3>Wersja 2.6.5</h3>
 
