--- a/changelog.html
+++ b/changelog.html
@@ -16,7 +16,7 @@
         <h3>Wersja 2.6.7</h3>
 
         <ul>
-            <li>Poprawiono kilka błęów/li>
+            <li>Poprawiono kilka błęów</li>
             <li>Zoptymalizowano i zauktualizowano usuwanie reklam</li>
             <li>Całkowicie wyłączono telemetrie yandex</li>
         </ul>
