--- a/changelog.html
+++ b/changelog.html
@@ -18,7 +18,9 @@
         <ul>
             <li>Poprawiono kilka błęów</li>
             <li>Zoptymalizowano i zauktualizowano usuwanie reklam</li>
-            <li>Całkowicie wyłączono telemetrie yandex</li>
+            <li>Całkowicie wyłączono telemetrie yandex co przyśpiesza stronę i ładowanie wideo</li>
+            <li>Wyświetylają się już obrazki we wyrenderowanych koemntarzach</li>
+            <li>Do wyszukiwarki komentarzy dodano koemndę "!media", która wyszukuje tylko komentarze z obrazkami</li>
         </ul>
 
         <h3>Wersja 2.6.6</h3>
