--- a/changelog.html
+++ b/changelog.html
@@ -20,6 +20,7 @@
             <li>Zoptymalizowano i zauktualizowano usuwanie reklam</li>
             <li>Całkowicie wyłączono telemetrie yandex co przyśpiesza stronę i ładowanie wideo</li>
             <li>Wyświetylają się już obrazki we wyrenderowanych koemntarzach</li>
+            <li style="color: rgb(240, 204, 0);">Jeśli w usuniętym koementarzu był obrazek to teraz się on wyświetla po przywróceniu</li>
             <li>Do wyszukiwarki komentarzy dodano koemndę "!media", która wyszukuje tylko komentarze z obrazkami</li>
         </ul>
 
