--- a/changelog.html
+++ b/changelog.html
@@ -22,6 +22,7 @@
             <li>Wyświetylają się już obrazki we wyrenderowanych koemntarzach</li>
             <li style="color: rgb(240, 204, 0);">Jeśli w usuniętym koementarzu był obrazek to teraz się on wyświetla po przywróceniu</li>
             <li>Do wyszukiwarki komentarzy dodano koemndę "!media", która wyszukuje tylko komentarze z obrazkami</li>
+            <li>Dodano do statystyk ilość koemntarzy z obrazkami</li>
         </ul>
 
         <h3>Wersja 2.6.6</h3>
