--- a/changelog.html
+++ b/changelog.html
@@ -13,6 +13,14 @@
 
         <h2>Lista zmian</h2>
 
+        <h3>Wersja 2.7.0 <span style="color: rgb(240, 204, 0);">Premiera za kilka dni</span></h3>
+
+        <ul>
+            <li style="color: rgb(240, 204, 0);">Dodano możliwość pobrania wszystkich koemnatrzy z profilu w formacie JSON</li>
+            <li style="color: rgb(240, 204, 0);">Dodano możliwość przeskanowania i pobrania w formacie JSON kontentu z profili, działów, poczekalni i strony głównej. Można przeskanować i zapisać dowolny zakres stron. Maksymalnie 100 stron na raz. Skrypt zapisuje cały kontent we wszystkimi możliwymi informacjami oraz wszystkie koemntarze</li>
+            <li style="color: rgb(240, 204, 0);">Powstanie specjalna strona, która pozwoli na wyświetlenie w czytelny sposób wszystkich plików JSON</li>
+        </ul>
+
         <h3>Wersja 2.6.7</h3>
 
         <ul>
@@ -20,7 +28,7 @@
             <li>Zoptymalizowano i zauktualizowano usuwanie reklam</li>
             <li>Całkowicie wyłączono telemetrie yandex co przyśpiesza stronę i ładowanie wideo</li>
             <li>Wyświetylają się już obrazki we wyrenderowanych koemntarzach</li>
-            <li style="color: rgb(240, 204, 0);">Jeśli w usuniętym koementarzu był obrazek to teraz się on wyświetla po przywróceniu</li>
+            <li>Jeśli w usuniętym koementarzu był obrazek to teraz się on wyświetla po przywróceniu</li>
             <li>Do wyszukiwarki komentarzy dodano koemndę "!media", która wyszukuje tylko komentarze z obrazkami</li>
             <li>Dodano do statystyk ilość koemntarzy z obrazkami</li>
         </ul>
