--- a/changelog.html
+++ b/changelog.html
@@ -21,6 +21,13 @@
             <li style="color: rgb(240, 204, 0);">Powstanie specjalna strona, która pozwoli na wyświetlenie w czytelny sposób wszystkich plików JSON</li>
         </ul>
 -->
+
+        <h3>Wersja 2.6.8</h3>
+
+        <ul>
+            <li>Wszystkie obrazki we wrzutkach są teraz wyświetlane bez znaku wodnego</li>
+        </ul>
+        
         <h3>Wersja 2.6.7</h3>
 
         <ul>
