--- a/changelog.html
+++ b/changelog.html
@@ -12,15 +12,12 @@
         <h1>Platynowa dzida</h1>
 
         <h2>Lista zmian</h2>
-<!--
-        <h3>Wersja 2.7.0 <span style="color: rgb(240, 204, 0);">Premiera za kilka dni</span></h3>
+
+        <h3>Wersja 2.6.9</h3>
 
         <ul>
-            <li style="color: rgb(240, 204, 0);">Dodano możliwość pobrania wszystkich koemnatrzy z profilu w formacie JSON</li>
-            <li style="color: rgb(240, 204, 0);">Dodano możliwość przeskanowania i pobrania w formacie JSON kontentu z profili, działów, poczekalni i strony głównej. Można przeskanować i zapisać dowolny zakres stron. Maksymalnie 100 stron na raz. Skrypt zapisuje cały kontent we wszystkimi możliwymi informacjami oraz wszystkie koemntarze</li>
-            <li style="color: rgb(240, 204, 0);">Powstanie specjalna strona, która pozwoli na wyświetlenie w czytelny sposób wszystkich plików JSON</li>
+            <li>Poprawiono kilka błędów</li>
         </ul>
--->
 
         <h3>Wersja 2.6.8</h3>
 
