--- a/changelog.html
+++ b/changelog.html
@@ -16,6 +16,7 @@
         <h3>Wersja 2.6.9</h3>
 
         <ul>
+            <li>Zmieniono profil do któego można pisać sugestie</li>
             <li>Poprawiono kilka błędów</li>
         </ul>
 
