--- a/changelog.html
+++ b/changelog.html
@@ -11,6 +11,8 @@
     <body>
         <h1>Platynowa dzida</h1>
 
+        <h2>Debile Aezakmi120 i AgentofMayhem pierdlą, że są moimi kolegami, a ja tych cweli nie znam i nie mam z nimi kontaktu. Konto michal1223r jest moje.</h2>
+
         <h2>Lista zmian</h2>
 
         <h3>Wersja 2.6.9</h3>
