--- a/changelog.html
+++ b/changelog.html
@@ -13,6 +13,13 @@
 
         <h2>Lista zmian</h2>
 
+        <h3>Wersja 2.8</h3>
+
+        <ul>
+            <li>Dodano komendę !name wyszukującą w komentarzach użytkownika jego imienia lub nazwiska</li>
+            <li>Poprawiono kilka błędów</li>
+        </ul>
+
         <h3>Wersja 2.6.9</h3>
 
         <ul>
