--- a/changelog.html
+++ b/changelog.html
@@ -74,8 +74,7 @@
         <h3>Wersja 2.6.6</h3>
 
         <ul>
-            <li>Dodano komendę "!neutral" wyszukującą tylko koemntarze z zerowym bilansem</li>
-            <li>Dodano opcję spamu. Po wpisaniu treści komentarza skrypt automatycznie odpowie na każdy koemntarz w poczekalni</li>
+            <li>Dodano komendę "!neutral" wyszukującą tylko komentarze z zerowym bilansem</li>
             <li>Dodano automatyczne raportowanie całego kontentu na profilu</li>
         </ul>
 
