--- a/changelog.html
+++ b/changelog.html
@@ -10,34 +10,15 @@
     </head>
     <body>
         <h1>Platynowa dzida</h1>
-
-                <h2>Oświadczenie dotyczące odpowiedzialności za użytkowanie wtyczki</h2>
-            <p>
-                Wtyczka została stworzona w celu ułatwienia korzystania z platformy poprzez automatyzację wybranych działań zgodnych z regulaminem strony.
-            </p>
-            <p>Wtyczka nie jest przeznaczona do:</p>
-            <ul>
-                <li>działań naruszających prawo,</li>
-                <li>łamania regulaminów platform internetowych,</li>
-                <li>powodowania szkód, nadużywania funkcjonalności strony ani żadnych innych nieodpowiednich lub szkodliwych działań.</li>
-            </ul>
-            <p>
-                Każdy użytkownik, który zdecyduje się na instalację i korzystanie z wtyczki, robi to na własną odpowiedzialność. Twórca nie ponosi odpowiedzialności za:
-            </p>
-            <ul>
-                <li>Nieodpowiednie wykorzystanie wtyczki, które prowadzi do naruszenia przepisów prawa lub regulaminów serwisów.</li>
-                <li>Blokady konta, bany lub inne sankcje nałożone przez administrację platform, wynikające z użycia wtyczki.</li>
-                <li>Szkody powstałe w wyniku działania wtyczki, które wynikają z niewłaściwego jej użycia lub jej wykorzystania w sposób sprzeczny z przeznaczeniem.</li>
-            </ul>
-            <p>
-                Zaleca się każdemu użytkownikowi zapoznanie się z regulaminem platformy, na której wtyczka jest używana, oraz upewnienie się, że sposób korzystania z wtyczki jest zgodny z jej zasadami.
-            </p>
-            <p>
-                Twórca zastrzega sobie prawo do wycofania wsparcia technicznego dla wtyczki w dowolnym momencie oraz do zaprzestania jej dalszego rozwijania i udostępniania.
-            </p>
-
         
         <h2>Lista zmian</h2>
+
+        <h3>Wersja 2.8.1</h3>
+
+        <ul>
+            <li>Zmieniono profil do którego można pisać sugestie</li>
+            <li>Wznowiono wsparcie i rozów wtyczki. Planowanych jest wiele przydatnych funkcji. Liczę również na wsze sugestie</li>
+        </ul>
 
         <h3>Wersja 2.8</h3>
 
@@ -263,5 +244,31 @@
             <li>Linki do wylogowania w komentarzach są automatycznie usuwane</li>
             <li>Mój login jest niebieski</li>
         </ul> 
+
+
+          <h2>Oświadczenie dotyczące odpowiedzialności za użytkowanie wtyczki</h2>
+            <p>
+                Wtyczka została stworzona w celu ułatwienia korzystania z platformy poprzez automatyzację wybranych działań zgodnych z regulaminem strony.
+            </p>
+            <p>Wtyczka nie jest przeznaczona do:</p>
+            <ul>
+                <li>działań naruszających prawo,</li>
+                <li>łamania regulaminów platform internetowych,</li>
+                <li>powodowania szkód, nadużywania funkcjonalności strony ani żadnych innych nieodpowiednich lub szkodliwych działań.</li>
+            </ul>
+            <p>
+                Każdy użytkownik, który zdecyduje się na instalację i korzystanie z wtyczki, robi to na własną odpowiedzialność. Twórca nie ponosi odpowiedzialności za:
+            </p>
+            <ul>
+                <li>Nieodpowiednie wykorzystanie wtyczki, które prowadzi do naruszenia przepisów prawa lub regulaminów serwisów.</li>
+                <li>Blokady konta, bany lub inne sankcje nałożone przez administrację platform, wynikające z użycia wtyczki.</li>
+                <li>Szkody powstałe w wyniku działania wtyczki, które wynikają z niewłaściwego jej użycia lub jej wykorzystania w sposób sprzeczny z przeznaczeniem.</li>
+            </ul>
+            <p>
+                Zaleca się każdemu użytkownikowi zapoznanie się z regulaminem platformy, na której wtyczka jest używana, oraz upewnienie się, że sposób korzystania z wtyczki jest zgodny z jej zasadami.
+            </p>
+            <p>
+                Twórca zastrzega sobie prawo do wycofania wsparcia technicznego dla wtyczki w dowolnym momencie oraz do zaprzestania jej dalszego rozwijania i udostępniania.
+            </p>
     </body>
 </html>
