--- a/changelog.html
+++ b/changelog.html
@@ -17,7 +17,7 @@
 
         <ul>
             <li>Zmieniono profil do którego można pisać sugestie</li>
-            <li>Wznowiono wsparcie i rozów wtyczki. Planowanych jest wiele przydatnych funkcji. Liczę również na wsze sugestie</li>
+            <li>Wznowiono wsparcie i rozwój wtyczki. Planowanych jest wiele przydatnych funkcji. Liczę również na wsze sugestie</li>
         </ul>
 
         <h3>Wersja 2.8</h3>
